@@ -1,16 +1,16 @@
 package me.jvegaf.musikbox.context.trackplaylist.application.search;
 
-import me.jvegaf.musikbox.context.playlists.domain.PlaylistId;
-import me.jvegaf.musikbox.context.trackplaylist.application.TracksResponse;
 import me.jvegaf.musikbox.context.trackplaylist.domain.TrackPlaylist;
 import me.jvegaf.musikbox.context.trackplaylist.domain.TrackPlaylistRepository;
 import me.jvegaf.musikbox.context.tracks.application.TrackResponse;
+import me.jvegaf.musikbox.context.tracks.application.TracksResponse;
+import me.jvegaf.musikbox.context.tracks.domain.Track;
+import me.jvegaf.musikbox.context.tracks.domain.TrackId;
 import me.jvegaf.musikbox.context.tracks.domain.TrackRepository;
 import me.jvegaf.musikbox.shared.domain.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public final class TrackPlaylistsSearcher {
@@ -24,14 +24,19 @@ public final class TrackPlaylistsSearcher {
         this.trackRepository = trackRepository;
     }
 
-    @SuppressWarnings("OptionalGetWithoutIsPresent")
-    public TracksResponse search(PlaylistId playlistId) {
-        new ArrayList<>();
+    public TracksResponse search(String playlistId) {
         List<TrackPlaylist> trackPlaylists = repository.search(playlistId);
 
-        return new TracksResponse(trackPlaylists.stream()
-                                                .map(tp -> trackRepository.search(tp.trackId()).get())
-                                                .map(TrackResponse::fromAggregate)
-                                                .collect(Collectors.toList()));
+        if (trackPlaylists.isEmpty()) return new TracksResponse(new ArrayList<>());
+
+        List<Track>
+                tracks =
+                trackPlaylists.stream()
+                              .map(tp -> trackRepository.search(new TrackId(tp.trackId())).orElseThrow())
+                              .toList();
+
+        List<TrackResponse> trackResponses = tracks.stream().map(TrackResponse::fromAggregate).toList();
+
+        return new TracksResponse(trackResponses);
     }
 }
